--- a/src/index.html
+++ b/src/index.html
@@ -1,48 +1,112 @@
 <!DOCTYPE html>
-<html>
+<html data-theme="dark">
 <head>
     <title>Xsstrange</title>
     <link rel="stylesheet" type="text/css" href="style.css">
-    <link rel="icon" href="logo.png"  sizes="any" type="image/svg+xml" >
+    <link rel="icon" href="logo.png" sizes="any" type="image/svg+xml">
+    <link href="https://fonts.googleapis.com/css2?family=JetBrains+Mono:wght@400;700&family=Inter:wght@400;600&display=swap" rel="stylesheet">
 </head>
 <body>
-    <div class="header">
-        <h1>Xsstrange</h1>
+    <div class="matrix-bg"></div>
+    <div class="theme-switch">
+        <button id="themeToggle" aria-label="Toggle theme">
+            <svg class="moon" viewBox="0 0 24 24"><path d="M12 3a6 6 0 0 0-6 6v12h12V9a6 6 0 0 0-6-6z"/></svg>
+            <svg class="sun" viewBox="0 0 24 24"><circle cx="12" cy="12" r="5"/><path d="M12 1v2M12 21v2M4.22 4.22l1.42 1.42M18.36 18.36l1.42 1.42M1 12h2M21 12h2M4.22 19.78l1.42-1.42M18.36 5.64l1.42-1.42"/></svg>
+        </button>
     </div>
-    <p>Welcome to Xsstrange! Developed by the <a href="https://www.gallipoli.xyz/" target="_blank">Gallipoli Community</a>, 
-        our project is a open source platform designed to
-        simulate realistic web vulnerabilities in a safe, legal,
-        and collaborative environment. Inspired by the valor
-        and strategic ingenuity of the historic Gallipoli campaign,
-        our community is committed to forging a digital proving ground
-        where cybersecurity skills are honed and innovations in defense are born.</p>
+    <div class="container">
+        <header class="main-header">
+            <div class="logo-container">
+                <div class="glitch-wrapper">
+                    <h1 class="glitch" data-text="Xsstrange">Xsstrange</h1>
+                </div>
+                <div class="header-subtitle">Open Source Web Security Testing Platform</div>
+            </div>
+        </header>
 
-    <ul>
-        <li><b>Realistic Scenarios:</b> Our platform meticulously simulates modern web vulnerabilities - such as XSS, SSRF, and CORS -in a controlled, authentic environment.</li>
-        <li><b>Open Source Collaboration:</b>  Built for transparency and innovation, Xsstrange invites community contributions and offers a secure, legal space to experiment with cutting-edge security tools.</li>
-        <li><b>Modular and Scalable: </b>  With Docker-powered containerization, create and customize your testing environment with ease, adapting to evolving security challenges.</li>
-    </ul>
+        <div class="terminal-section">
+            <div class="terminal-header">
+                <span class="terminal-title">Project Overview</span>
+                <div class="terminal-buttons">
+                    <span></span><span></span><span></span>
+                </div>
+            </div>
+            <div class="terminal-content">
+                <span class="prompt">$</span> Welcome to Xsstrange - A Gallipoli Community Project
+                <p>Welcome to Xsstrange! Developed by the <a href="https://www.gallipoli.xyz/" target="_blank">Gallipoli Community</a>, 
+                    our project is a open source platform designed to
+                    simulate realistic web vulnerabilities in a safe, legal,
+                    and collaborative environment. Inspired by the valor
+                    and strategic ingenuity of the historic Gallipoli campaign,
+                    our community is committed to forging a digital proving ground
+                    where cybersecurity skills are honed and innovations in defense are born.</p>
+            </div>
+        </div>
 
-    <h2>Getting Started</h2>
-    <p>Ready to explore the world of web security? Here's how to get started:</p>
-    <ol>
-        <li>Clone the Xsstrange repository from GitHub.</li>
-        <li>Run the Docker Compose command to build the environment.</li>
-        <li>Access the Xsstrange platform in your browser.</li>
-    </ol>
+        <div class="features-grid">
+            <div class="feature-card">
+                <div class="card-icon">⚡</div>
+                <h3>Realistic Scenarios</h3>
+                <p>Modern web vulnerabilities in controlled environments</p>
+            </div>
+            <div class="feature-card">
+                <div class="card-icon">🔗</div>
+                <h3>Open Source</h3>
+                <p>Community-driven security testing platform</p>
+            </div>
+            <div class="feature-card">
+                <div class="card-icon">🔄</div>
+                <h3>Modular Design</h3>
+                <p>Docker-powered scalable architecture</p>
+            </div>
+        </div>
 
-    <h2>Test Environments</h2>
-    <p>Explore our categorized test environments:</p>
-    <ul class="test-categories">
-        <li><a href="/test_cases/injection/injection.html"><b>Injection Attacks:</b></a> SQL Injection, Command Injection</li>
-    </ul>
+        <section class="test-environments">
+            <h2><span class="bracket">[</span> Test Environments <span class="bracket">]</span></h2>
+            <div class="test-grid">
+                <a href="/cases/xss/" class="test-card">
+                    <div class="card-header">
+                        <span class="card-tag">Critical</span>
+                        <h3>XSS Attacks</h3>
+                    </div>
+                    <p>Cross-site scripting attack simulations and defense strategies</p>
+                    <div class="card-footer">
+                        <span class="status-dot"></span>
+                        <span class="status-text">Active</span>
+                        <span class="card-arrow">→</span>
+                    </div>
+                </a>
+            </div>
+        </section>
 
-    <h2>Contact Us</h2>
-    <p>If you have any questions or need further information, feel free to reach out to us:</p>
-    <ul class="contact-list">
-        <li>Email: <a href="mailto:info@gallipoli.xyz">info@gallipoli.xyz</a></li>
-        <li>X: <a href="https://x.com/gallipolixyz" target="_blank">@gallipolixyz</a></li>
-        <li>GitHub: <a href="https://github.com/gallipolixyz" target="_blank">github.com/gallipolixyz</a></li>
-    </ul>
+        <h2>Getting Started</h2>
+        <p>Ready to explore the world of web security? Here's how to get started:</p>
+        <ol>
+            <li>Clone the Xsstrange repository from GitHub.</li>
+            <li>Run the Docker Compose command to build the environment.</li>
+            <li>Access the Xsstrange platform in your browser.</li>
+        </ol>
+
+        <h2>Contact Us</h2>
+        <p>If you have any questions or need further information, feel free to reach out to us:</p>
+        <ul class="contact-list">
+            <li>Email: <a href="mailto:info@gallipoli.xyz">info@gallipoli.xyz</a></li>
+            <li>X: <a href="https://x.com/gallipolixyz" target="_blank">@gallipolixyz</a></li>
+            <li>GitHub: <a href="https://github.com/gallipolixyz" target="_blank">github.com/gallipolixyz</a></li>
+        </ul>
+    </div>
+    <script>
+        const themeToggle = document.getElementById('themeToggle');
+        const html = document.documentElement;
+        const savedTheme = localStorage.getItem('theme') || 'light';
+        html.setAttribute('data-theme', savedTheme);
+
+        themeToggle.addEventListener('click', () => {
+            const currentTheme = html.getAttribute('data-theme');
+            const newTheme = currentTheme === 'light' ? 'dark' : 'light';
+            html.setAttribute('data-theme', newTheme);
+            localStorage.setItem('theme', newTheme);
+        });
+    </script>
 </body>
 </html>
