fix: index.html
- fixed typo and 'type' attribute of link

--- a/src/index.html
+++ b/src/index.html
@@ -2,9 +2,9 @@
 <html data-theme="dark">
 <head>
     <title>Xsstrange</title>
-    <link rel="stylesheet" type="text/css" href="style.css">
-    <link rel="icon" href="logo.png" sizes="any" type="image/svg+xml">
-    <link href="https://fonts.googleapis.com/css2?family=JetBrains+Mono:wght@400;700&family=Inter:wght@400;600&display=swap" rel="stylesheet">
+    <link rel="stylesheet" type="text/css" href="./assets/style.css">
+    <link rel="icon" href="/logo.png" sizes="any" type="image/svg+xml">
+    <link href="https://fonts.googleapis.com/css2?family=JetBrains+Mono:wght@400;700&family=Inter:wght@400;600&display=swap" rel="stylesheet" type="text/css">
 </head>
 <body>
     <div class="matrix-bg"></div>
