--- a/src/index.html
+++ b/src/index.html
@@ -2,16 +2,29 @@
 <html data-theme="dark">
 <head>
     <title>Xsstrange</title>
-    <link rel="stylesheet" type="text/css" href="./assets/style.css">
-    <link rel="icon" href="/logo.png" sizes="any" type="image/svg+xml">
+    <link rel="stylesheet" type="text/css" href="assets/style.css">
+    <link rel="icon" type="image/png" href="assets/images/logo.png">
     <link href="https://fonts.googleapis.com/css2?family=JetBrains+Mono:wght@400;700&family=Inter:wght@400;600&display=swap" rel="stylesheet" type="text/css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
 </head>
 <body>
     <div class="matrix-bg"></div>
     <div class="theme-switch">
         <button id="themeToggle" aria-label="Toggle theme">
-            <svg class="moon" viewBox="0 0 24 24"><path d="M12 3a6 6 0 0 0-6 6v12h12V9a6 6 0 0 0-6-6z"/></svg>
-            <svg class="sun" viewBox="0 0 24 24"><circle cx="12" cy="12" r="5"/><path d="M12 1v2M12 21v2M4.22 4.22l1.42 1.42M18.36 18.36l1.42 1.42M1 12h2M21 12h2M4.22 19.78l1.42-1.42M18.36 5.64l1.42-1.42"/></svg>
+            <svg class="moon" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="currentColor">
+                <path d="M21 12.79A9 9 0 1 1 11.21 3 7 7 0 0 0 21 12.79z"/>
+            </svg>
+            <svg class="sun" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+                <circle cx="12" cy="12" r="5"/>
+                <line x1="12" y1="1" x2="12" y2="3"/>
+                <line x1="12" y1="21" x2="12" y2="23"/>
+                <line x1="4.22" y1="4.22" x2="5.64" y2="5.64"/>
+                <line x1="18.36" y1="18.36" x2="19.78" y2="19.78"/>
+                <line x1="1" y1="12" x2="3" y2="12"/>
+                <line x1="21" y1="12" x2="23" y2="12"/>
+                <line x1="4.22" y1="19.78" x2="5.64" y2="18.36"/>
+                <line x1="18.36" y1="5.64" x2="19.78" y2="4.22"/>
+            </svg>
         </button>
     </div>
     <div class="container">
@@ -45,17 +58,17 @@
 
         <div class="features-grid">
             <div class="feature-card">
-                <div class="card-icon">⚡</div>
+                <div class="card-icon"><i class="fas fa-bolt"></i></div>
                 <h3>Realistic Scenarios</h3>
                 <p>Modern web vulnerabilities in controlled environments</p>
             </div>
             <div class="feature-card">
-                <div class="card-icon">🔗</div>
+                <div class="card-icon"><i class="fas fa-link"></i></div>
                 <h3>Open Source</h3>
                 <p>Community-driven security testing platform</p>
             </div>
             <div class="feature-card">
-                <div class="card-icon">🔄</div>
+                <div class="card-icon"><i class="fas fa-sync"></i></div>
                 <h3>Modular Design</h3>
                 <p>Docker-powered scalable architecture</p>
             </div>
